--- a/docker/nginx/conf/vps/net.zuojiao.trader.conf
+++ b/docker/nginx/conf/vps/net.zuojiao.trader.conf
@@ -2,11 +2,11 @@ server {
     set    $BASIC_DIR    '/xrosy/src/_www';
 
     listen       80;
-    server_name  trader.zuojiao.net;
+    server_name  trader.zuojiao.net dev.trader.zuojiao.net;
 
     location / {
-        root $BASIC_DIR/net.zuojiao.trader;
-        index app.html index.html;
+        root /xrosy/src/_www/net.zuojiao.trader;
+        index main.html app.html index.html;
     }
 
 
