--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,13 @@ version: '3'
 
 services:
     nginx:
-        build: ./nginx
+        build: ./docker/nginx
         restart: always
         environment:
             - development
         volumes:
-            - ./nginx/conf/vps:/etc/nginx/conf.d:ro
-            - ../src/_www:/xrosy/src/_www
+            - ./docker/nginx/conf/vps:/etc/nginx/conf.d:ro
+            - ./src/_www:/xrosy/src/_www:ro
         expose:
             - "80"
             - "8080"
