--- a/docker/nginx/conf/vps/com.zhonganbio.x.conf
+++ b/docker/nginx/conf/vps/com.zhonganbio.x.conf
@@ -8,16 +8,13 @@ server {
 
 
 
-    # ---------------------
-    location   /fonts {
-        root    /xrosy/src/_www/_default;
-    }
 
-    location   (403|404|50x).html {
+    # 错误页
+    # ---------------------
+    error_page    403 /403.html;
+    error_page    404 /404.html;
+    error_page    500 502 503 504  /50x.html;
+    location ~ /(403|404|50x).html {
         root   /xrosy/src/_www/_default;
     }
-
-    # error_page    403 /403.html;
-    error_page    403 404 /404.html;
-    error_page    500 502 503 504  /50x.html;
 }
