--- a/docker/nginx/conf/vps/net.zuojiao.trader.conf
+++ b/docker/nginx/conf/vps/net.zuojiao.trader.conf
@@ -10,16 +10,11 @@ server {
     }
 
 
-
+    # 错误页
     # ---------------------
-    # error_page    403 /403.html;
-    error_page    403 404 /404.html;
+    error_page    403 /403.html;
+    error_page    404 /404.html;
     error_page    500 502 503 504  /50x.html;
-
-    location   /fonts {
-        root    /xrosy/src/_www/_default;
-    }
-
     location ~ /(403|404|50x).html {
         root   /xrosy/src/_www/_default;
     }
