--- a/src/net.zuojiao.operation/.eslintrc
+++ b/src/net.zuojiao.operation/.eslintrc
@@ -1,6 +1,7 @@
 {
     "extends": "zals",
     "rules": {
-        "no-console": [0]
+        "no-console": [0],
+        "array-element-newline": [0, {"multiline": null, "minItems": null}]
     }
 }
