--- a/src/net.zuojiao.operation/.babelrc
+++ b/src/net.zuojiao.operation/.babelrc
@@ -1,6 +1,13 @@
 {
     "presets": [
         "@babel/preset-env",
-        "@babel/preset-react"
-    ]
+        "@babel/preset-react",
+    ],
+
+    "plugins": [
+        [ "import", {
+            "libraryName": "antd-mobile",
+            "style"      : "css"
+        }]
+      ]
 }
