--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -138,6 +138,8 @@ RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
     && ln -sf /dev/stdout /var/log/nginx/access.log \
     && ln -sf /dev/stderr /var/log/nginx/error.log
 
+RUN apk add --no-cache --virtual .build-deps curl nano
+
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80 443
