--- a/src/net.zuojiao.operation/.babelrc
+++ b/src/net.zuojiao.operation/.babelrc
@@ -5,6 +5,8 @@
     ],
 
     "plugins": [
+        "react-hot-loader/babel",
+
         [ "import", {
             "libraryName": "antd-mobile",
             "style"      : "css"
