--- a/src/net.zuojiao.operation/package.json
+++ b/src/net.zuojiao.operation/package.json
@@ -28,16 +28,19 @@
         "less-loader": "^4.1.0",
         "node-sass": "^4.11.0",
         "postcss-loader": "^3.0.0",
+        "react-hot-loader": "^4.6.3",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "webpack": "^4.27.1",
         "webpack-cli": "^3.1.2",
         "webpack-dev-middleware": "^3.4.0",
-        "webpack-dev-server": "^3.1.10"
+        "webpack-dev-server": "^3.1.10",
+        "webpack-hot-middleware": "^2.24.3"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
         "antd-mobile": "^2.2.6",
+        "babel-polyfill": "^6.26.0",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-router": "^4.3.1",
