--- a/environment/nginx/_nginx/_conf.d/net.zuojiao.trader.conf
+++ b/environment/nginx/_nginx/_conf.d/net.zuojiao.trader.conf
@@ -1,24 +1,24 @@
-server {
-    set    $BASIC_DIR    '/xrosy/src/_www';
+# server {
+#     set    $BASIC_DIR    '/xrosy/src/_www';
 
-    listen       80;
-    server_name  trader.zuojiao.net dev.trader.zuojiao.net;
+#     listen       80;
+#     server_name  trader.zuojiao.net dev.trader.zuojiao.net;
 
-    location / {
-        root /xrosy/src/_www/net.zuojiao.trader;
-        index main.html app.html index.html;
-    }
+#     location / {
+#         root /xrosy/src/_www/net.zuojiao.trader;
+#         index main.html app.html index.html;
+#     }
 
 
-    # 错误页
-    # ---------------------
-    error_page    403 /403.html;
-    error_page    404 /404.html;
-    error_page    500 502 503 504  /50x.html;
-    location ~ /(403|404|50x).html {
-        root   /xrosy/src/_www/_default;
-    }
-}
+#     # 错误页
+#     # ---------------------
+#     error_page    403 /403.html;
+#     error_page    404 /404.html;
+#     error_page    500 502 503 504  /50x.html;
+#     location ~ /(403|404|50x).html {
+#         root   /xrosy/src/_www/_default;
+#     }
+# }
 
 
 # @
