--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,33 +2,34 @@ version: "3"
 services:
   nginx:
     container_name: nginx
-
+    # ======================================
+    # read_only: true
     # ======================================
     # build:
     #     context: ./environment/nginx
     #     dockerfile: Dockerfile
     #
-    build: ./environment/nginx
-
+    build  : ./environment/nginx
     # ======================================
-    # restart: always
-
+    restart: always
     # ======================================
-    volumes:
-      - ./workspace:/xrosy/src:ro
-      # - ./environment/nginx/conf/vps:/etc/nginx/conf.d:ro
-    ports:
-      - "80:80"
-      - "443:443"
-    links:
-      - node10
+    volumes: ["./workspace:/xrosy/src:ro"]
+    # ======================================
+    ports  : ["80:80", "443:443"]
+    # ======================================
+    links  : ["node10"]
+
+
 
 
   # ****************************************************************************
   node10:
     container_name: node10
     # ======================================
-    image: node:alpine
+    image: node:10-alpine
+    # ======================================
+    # 从文件中获取环境变量，可以为单独的文件路径或列表。
+    env_file: .env
     # ======================================
     # 以只读模式挂载容器的 root 文件系统
     read_only: true
@@ -38,10 +39,6 @@ services:
       - ./workspace/net.zuojiao.operation:/xrosy/net.zuojiao.operation
     working_dir: /xrosy/net.zuojiao.operation
     command: "node server.js"
-    # ======================================
-    # 从文件中获取环境变量，可以为单独的文件路径或列表。
-    # env_file: .env
-
     # ======================================
     # 设置环境变量。你可以使用数组或字典两种格式。
     # environment:
@@ -70,14 +67,3 @@ services:
     #   - db_root_password
     #   - my_other_secret
 
-
-  # node10:
-  #     # container_name: node10
-  #     build: ./environment/node10
-  #     # restart: always
-  #     environment:
-  #         - development
-  #     volumes:
-  #         - ./workspace/net.zuojiao.operation:/xrosy/net.zuojiao.operation
-  #     expose:
-  #         - '3000'
