--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,11 @@ services:
       - "80:80"
       - "443:443"
     # ======================================
-    links:
+    depends_on:
       - "node10"
+    # ======================================
+    links:
+      - "node10:node10"
 
 
 
