--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,26 @@ version: "3"
 
 services:
   nginx:
+    image: xrosy/nginx:latest
+    # ======================================
     container_name: nginx
     # ======================================
     # read_only: true
     # ======================================
-    image: "xrosy/nginx"
-    # ======================================
-    restart: "always"
+    # restart: "always"
     # ======================================
     env_file: .env
     # ======================================
-    # - 工作目录
-    working_dir: /etc/nginx
+    environment:
+      ENV_NAME:
+      SESSION_SECRET:
     # ======================================
     # - 挂载主机目录
     volumes:
       - "./environment/nginx/conf.d:/etc/nginx/conf.d:ro"
+    # ======================================
+    # - 工作目录
+    working_dir: /etc/nginx
     # ======================================
     # - 映射主机端口
     ports:
@@ -28,16 +32,16 @@ services:
       - "node10"
     # ======================================
     links:
-      - "node10:node10"
+      - "node10"
 
 
 
 
   # ****************************************************************************
   node10:
-    container_name: node10
+    image: xrosy/node:latest
     # ======================================
-    image: xrosy/node
+    container_name: node
     # ======================================
     # 从文件中获取环境变量，可以为单独的文件路径或列表。
     env_file: .env
